fix spacing on old pages and image on buy page

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -18,19 +18,12 @@ body {
   -moz-osx-font-smoothing: grayscale; 
 }
 
-/* Some space on top of pages */
-.container {
- margin-top: 50px;
- }
-
-
 /**
  * Headers and standard fonts
  */
 body {
 	font-size: 16px;
 	line-height: 1.7;
-	margin-top: 5px;
 	color: #555;
 }
 
@@ -40,7 +33,6 @@ i[class*='fa-'] {
 }
 
 h1 {
-  margin-top: 20px;
   margin-bottom: 10px;
 	font-size: 45px;
 /*   line-height: 60px; */
@@ -81,6 +73,9 @@ h5 {
   color: #555; 
 }
 
+p {
+	margin-top: 5px;
+}
 
 /* New widest container for headers */
 
@@ -95,7 +90,7 @@ h5 {
 .background {
   padding-bottom: 0;
   padding-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 50px;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 0 !important;
